--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
     <title>Protothing</title>
+    <script src="./scripts/glfx.js"></script>
+    <script src="./movementController.js"></script>
   </head>
   <body>
     
     <script type="text/javascript" src="scripts/jquery-1.8.3.min.js"></script>
-    
+    <script>
+    	launchGame();
+    </script>
   </body>
 </html>
