--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <title>Protothing</title>
   </head>
   <body>
+    <h1>Protothing</h1>
+
+
     
     <script type="text/javascript" src="scripts/jquery-1.8.3.min.js"></script>
-    
+    <script type="text/javascript" src="scripts/audio.js"></script>
   </body>
 </html>
