--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Protothing</h1>
 
+    <div id="loading">
+      
+    </div>
 
     
     <script type="text/javascript" src="scripts/jquery-1.8.3.min.js"></script>
