--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Protothing</title>
+    <title>1901</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style/screen.css">
@@ -10,12 +10,20 @@
 
   </head>
   <body>
-    <h1>Protothing</h1>
+    <h1>1901</h1>
 
     <div id="loading">
       
     </div>
 
+    <ul id="controls">
+      <li class="bass"></li>
+      <li class="drums"></li>      
+      <li class="keys"></li>            
+      <li class="guitar"></li>            
+      <li class="synth"></li>            
+      <li class="voice"></li>            
+    </ul>
     
     <script type="text/javascript" src="scripts/jquery-1.8.3.min.js"></script>
 
