--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html manifest="cache.manifest">
+<html>
   <head>
-    <title>Webmixer</title>
+    <title>Conductor</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style/screen.css">
@@ -12,13 +12,13 @@
   </head>
   <body>
 
-    <div id="loading">
-      
-    </div>
+
 
     <div id="intro">
-      <h1>Webmixer</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sunt unde eligendi excepturi voluptatum aliquam nam error saepe dolor alias soluta earum sed ratione consequuntur facere quidem eveniet quam vero.</p>
+      <h1>Conductor</h1>
+      <img src="images/conductor.png">
+      <p>User your arms to remix the audio</p>
+      <div id="loading"><img src="images/ajax-loader.gif"></div>
       <p><a href="#" id="play">Play</a></p>
     </div>
 
